objects/SML_Data__c.object
<CustomObject>
    <fields>
        <fullName>AccountSCKey__c</fullName>
        <externalId>true</externalId>
        <label>AccountSCKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>text(Account__r.Country__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>text(Account__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Vertical__c</fullName>
        <formula>text(Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SML Data</relationshipLabel>
        <relationshipName>SML_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Opportunity_Quantity__c</fullName>
        <formula>IF(ISNULL(Quote_Quantity__c), Opportunity_Quantity__c, Quote_Quantity__c)</formula>
        <label>Active Opportunity Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Opportunity_Total__c</fullName>
        <formula>IF(ISNULL(Quote_Total__c), Opportunity_Total__c, Quote_Total__c)</formula>
        <label>Active Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cell_Color__c</fullName>
        <formula>IF(AND(Cloud_Products__c,  Premise_Products__c), &apos;#e6f7ff&apos;, IF(Cloud_Products__c, &apos;#9ddbff&apos;, &apos;#ffffff&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Maintenance_Quantity__c</fullName>
        <label>Cloud Maintenance Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Maintenance_Total__c</fullName>
        <label>Cloud Maintenance Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloud_Opportunity_Quantity__c</fullName>
        <label>Cloud Opportunity Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Opportunity_Total__c</fullName>
        <label>Cloud Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloud_Order_Quantity__c</fullName>
        <label>Cloud Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Order_Total__c</fullName>
        <label>Cloud Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cloud_Products__c</fullName>
        <formula>IF(OR(
 Cloud_Maintenance_Quantity__c &gt; 0 , Cloud_Opportunity_Quantity__c &gt; 0, Cloud_Order_Quantity__c &gt; 0, Cloud_Quote_Quantity__c &gt; 0), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cloud Products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Quote_Quantity__c</fullName>
        <label>Cloud Quote Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Quote_Total__c</fullName>
        <label>Cloud Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <formula>IF(ISBLANK(TEXT(Technical_Profile_Competitor__r.Competitor__c)), &apos;&apos;, &apos;, &apos; + TEXT(Technical_Profile_Competitor__r.Competitor__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidence_Level_Formula__c</fullName>
        <formula>IF(Status1__c = &apos;Next Best Action&apos;,
    IF(Confidence_Level__c  &gt;=  0.75, &apos;High&apos;, 
        IF(Confidence_Level__c &gt;= 0.50, &apos;Medium&apos;,
             IF(Confidence_Level__c &gt;= 0.25, &apos;Low&apos;, &apos;Poor&apos;)))
    , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confidence Level Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <label>Confidence Level</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Change__c</fullName>
        <label>Last Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Quantity__c</fullName>
        <label>Maintenance Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Total__c</fullName>
        <label>Maintenance Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NBA_Reason_Text__c</fullName>
        <description>Next Best Action Reason description for Engagement Map</description>
        <formula>IF( Status1__c = &quot;Next Best Action&quot;, 
    CASE( Solution_Category__r.Name, 
        &quot;iWD&quot;, &quot;Acct has more than 200 seats&lt;br/&gt;of other tracked product&quot;,
        &quot;Chat&quot;, &quot;Acct has Email or Desktop,&lt;br/&gt;OR (has Digital AND not Email, Chat,&lt;br/&gt;Mobile Engagement&lt;br/&gt;or Conversation Manager)&quot;,
        &quot;Email&quot;, &quot;Acct has Omnichannel Analytics&lt;br/&gt;or Chat, OR (has Desktop&lt;br/&gt;AND (SIP or Outbound Voice))&quot;,
        &quot;GVP&quot;, &quot;Acct has Email, Chat or SIP&quot;,
        &quot;Mobile Engagement&quot;, &quot;Acct has CIM&lt;br/&gt;but does not have Chat&quot;,
        &quot;Outbound Voice&quot;, &quot;Acct has ((CIM or Infomart),&lt;br/&gt;AND Inbound Voice more than 200 seats),&lt;br/&gt;OR has (Email or Chat)&quot;,
        &quot;Social&quot;, &quot;Acct has Chat or E-Mail&quot;,
        &quot;Web Collaboration&quot;, &quot;Acct has Chat&quot;,
        &quot;Interaction Analytics&quot;, &quot;Acct has Interaction Recording&quot;,
        &quot;Interaction Recording&quot;, &quot;Acct has SIP and Desktop&quot;,
        &quot;Quality Management&quot;, &quot;Acct has Interaction Recording&quot;,
        &quot;WFM&quot;, &quot;Acct has either Inbound or Outbound Voice&lt;br/&gt;with more than 200 seats,&lt;br/&gt;or some Digital with more than 200 seats&quot;,
        &quot;SIP&quot;, &quot;Acct has either Inbound or Outbound Voice,&lt;br/&gt;or CIM, or GVP,&lt;br/&gt;or (some Digital or iWD)&quot;,
        &quot;InfoMart&quot;, &quot;Acct has either Email, Desktop,&lt;br/&gt;Interactive Insights or&lt;br/&gt;has (Chat and (Inbound or Outbound Voice))&quot;,
        &quot;Conversation Manager&quot;, &quot;Acct has Inbound or Outbound Voice&lt;br/&gt;and some Digital&quot;,
        &quot;Desktop&quot;, &quot;Acct has CIM&quot;,
        &quot;&quot;),
    &quot;&quot;)</formula>
        <label>NBA Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Quantity__c</fullName>
        <label>Opportunity Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Total__c</fullName>
        <label>Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Info__c</fullName>
        <formula>CASE(Status__c,
    &quot;NA&quot;, LEFT(Notes__c, 100),
    &quot;active&quot;, &apos;Quantity/Price: &apos; + TEXT(IF((Total_Quote_Quantity__c == 0), Total_Opportunity_Quantity__c, Total_Quote_Quantity__c)) + &apos; / &apos; + TEXT(CurrencyIsoCode) + &apos; &apos; + TEXT(IF((Total_Quote_Amount__c==0), Total_Opportunity_Amount__c, Total_Quote_Amount__c)),
    &quot;sold&quot;, IF( Under_Maintenance__c , &apos;Quantity/Price under maintenance: &apos; + TEXT(Total_Maintenance_Quantity__c) + &apos; / &apos; + TEXT(CurrencyIsoCode) + &apos; &apos; + TEXT(ROUND(Total_Maintenance_Total__c, 2)), &apos;Previously sold but no longer under maintenance&apos;),
	&quot;sold no maintenance&quot;, &apos;Previously sold but no longer under maintenance&apos;,
    &quot;Sold/Active&quot;, IF( Under_Maintenance__c, &apos;Sold: Quantity/Price under maintenance: &apos; + TEXT(Total_Maintenance_Quantity__c) + &apos; / &apos; + TEXT(CurrencyIsoCode) + &apos; &apos; + TEXT(Total_Maintenance_Total__c), &apos;Previously sold but no longer under maintenance&apos;) + &apos;,  Active: Quantity/Price: &apos; + TEXT(IF((Total_Quote_Quantity__c==0), Total_Opportunity_Quantity__c, Total_Quote_Quantity__c)) + &apos; / &apos; + TEXT(CurrencyIsoCode) + &apos; &apos; + TEXT(IF((Total_Quote_Amount__c==0), Total_Opportunity_Amount__c, Total_Quote_Amount__c)),
    &quot;Blocked&quot;, &apos;Blocked &apos; + Competitor__c,
    &quot;Whitespace&quot;, &apos;Whitespace age: &apos; + TEXT(Whitespace_Days__c) + &apos; days&apos;,
    &quot;Planning Underway&quot;, &apos;&apos;,
    &quot;Next Best Action&quot;, &apos;Confidence Level: &apos; + Confidence_Level_Formula__c ,
    null)</formula>
        <label>Order Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planning_Underway_Date__c</fullName>
        <label>Planning Underway Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premise_Products__c</fullName>
        <formula>IF(OR(Opportunity_Quantity__c &gt; 0,  Quote_Quantity__c &gt; 0, Order_Quantity__c &gt; 0,  Maintenance_Quantity__c &gt; 0), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise Products?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Quantity__c</fullName>
        <label>Quote Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Total__c</fullName>
        <label>Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Category</label>
        <referenceTo>Solution_Category__c</referenceTo>
        <relationshipLabel>SML Data</relationshipLabel>
        <relationshipName>SML_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status1__c</fullName>
        <formula>IF(TEXT(Status__c) == &apos;NA&apos;, &apos;na&apos;, 
  IF(TEXT(Status__c) == &apos;Blocked&apos;, &apos;blocked&apos;,  
    IF(TEXT(Status__c) == &apos;Sold&apos;, &apos;sold&apos;, 
      IF(TEXT(Status__c) == &apos;active&apos;, &apos;active&apos;, 
        IF(TEXT(Status__c) == &apos;Sold/Active&apos;, &apos;soldactive&apos;,TEXT(Status__c))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Overridden_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Overridden Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Planning Underway</fullName>
                </value>
                <value>
                    <fullName>Whitespace</fullName>
                    <default>true</default>
                    <label>Whitespace</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE/SOLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxonomy_Category_1__c</fullName>
        <formula>Solution_Category__r.Solution_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_Category__c</fullName>
        <formula>Solution_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Profile_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Profile Competitor</label>
        <referenceTo>Technical_Profile_Competitors__c</referenceTo>
        <relationshipLabel>SML Data</relationshipLabel>
        <relationshipName>SML_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Maintenance_Quantity__c</fullName>
        <formula>Cloud_Maintenance_Quantity__c+ Maintenance_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Maintenance Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Maintenance_Total__c</fullName>
        <formula>Cloud_Maintenance_Total__c +  Maintenance_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Maintenance Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Amount__c</fullName>
        <formula>Cloud_Opportunity_Total__c +  Opportunity_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Quantity__c</fullName>
        <formula>Cloud_Opportunity_Quantity__c +  Opportunity_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <formula>Cloud_Order_Total__c +  Order_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Order_Quantity__c</fullName>
        <formula>Cloud_Order_Quantity__c +  Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Amount__c</fullName>
        <formula>Cloud_Quote_Total__c +  Quote_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Quantity__c</fullName>
        <formula>Cloud_Quote_Quantity__c +  Quote_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quote Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whitespace_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Whitespace Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Whitespace_Days__c</fullName>
        <formula>TODAY() - Whitespace_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Whitespace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Whitespace_over_Threshold__c</fullName>
        <formula>IF( AND( Whitespace_Days__c &gt; 60 , ISPICKVAL(Status__c, &quot;Whitespace&quot;)) , &quot;!&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Whitespace over Threshold</label>
        <type>Text</type>
    </fields>
    <label>SML Data</label>
    <listViews>
        <fullName>Blue_Cross_and_Blue_Shield_of_Kasas_City</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Taxonomy_Category_1__c</columns>
        <columns>Solution_Category__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountSCKey__c</field>
            <operation>contains</operation>
            <value>001U000001ZVFUzIAP</value>
        </filters>
        <label>Blue Cross and Blue Shield of Kasas City</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Problem_Records</fullName>
        <columns>NAME</columns>
        <columns>Status_Overridden_Manually__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Solution_Category__c</columns>
        <columns>AccountSCKey__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Swisscom (Schw</value>
        </filters>
        <label>Problem Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountSCKey__c</columns>
        <columns>Solution_Category__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Under Armour</value>
        </filters>
        <filters>
            <field>AccountSCKey__c</field>
            <operation>contains</operation>
            <value>001U0000007Ooiz</value>
        </filters>
        <label>Test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SML-{000000}</displayFormat>
        <label>SML Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SML Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>